# fastapi-cloudwatch-middleware-sample

./: README.md
backend/: Dockerfile  main.py  middleware.py  pyproject.toml
