[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["ttani03 <68139726+ttani03@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
boto3 = "^1.34.40"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
